@@ -63,7 +63,7 @@ else:
 test.write('SConstruct', """
 env = Environment(SWIGFLAGS='-python',
                   %(swig_arch_var)s
-                  CPPPATH=['%(python_include)s/'],
+                  CPPPATH=[r'%(python_include)s/'],
                   LDMODULEPREFIX='%(ldmodule_prefix)s',
                   LDMODULESUFFIX='%(_dll)s',
                   SWIG=r'%(swig)s',
