@@ -139,7 +139,8 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
          to the specfile without adding specific logic for each one to scons.
     - The test for Python.h needed by swig tests is moved to get_python_platform
       so it does not have to be repeated in every test; picks up one failure
-      which did not make the (previously needed) check.
+      which did not make the (previously needed) check. Windows version
+      of get_python_platform needed some rework in case running in virtualenv.
     - If test opens os.devnull, register with atexit so file opens do not leak.
     - Fix bugs in Win32 process spawn logic to handle OSError exception correctly.
     - Use time.perf_counter instead of time.clock if it exists.
